@@ -1,3 +1,10 @@
+2007-03-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b53
+
+* Fix: Quotes (single and double) and backslash were not quoted in
+        imagemap.
+
+ * Fix: Little HTML fixes in imagemap.
+
 2007-03-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b52
 
  * New: function truncateText() in new file lib/text.php
